--- a/templates/base.html
+++ b/templates/base.html
@@ -7,69 +7,127 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Ecommerce</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/3.3.7/cerulean/bootstrap.min.css">
+  <link rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Simonetta:500,600,700,800" rel="stylesheet">
+
   <link rel="stylesheet" href="{% static 'font-awesome/css/font-awesome.min.css' %}">
+
   <link rel="stylesheet" href="{% static 'css/custom.css' %}">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+  <!-- Fontawosome CSS -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 </head>
 
-<body>
-  <!-- Fixed masthead -->
-  <nav class="navbar navbar-masthead navbar-default navbar-fixed-top">
-    <div class="container">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
+<body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
+  <div class="site-wrap">
+    <div class="contariner-logo text-center ">
+      <a href="{% url 'index' %}"><img class="logo logo--main" src="{% static 'img/winelogo.png' %}" height="180px"
+          alt=""></a>
+    </div>
+    <nav class="navbar navbar-expand-lg navbar-dark ">
+      <div class="container">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar10">
+          <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand" href="/">Ecommerce</a>
-      </div>
-      <div id="navbar" class="navbar-collapse collapse">
-        <ul class="nav navbar-nav navbar-right">
-          {% if user.is_authenticated %}
-          <li><a href="{% url 'profile' %}">Profile</a></li>
-          <li><a href="{% url 'logout' %}">Log Out</a></li>
-          {%  else %}
-          <li><a href="{% url 'register' %}">Register</a></li>
-          <li><a href="{% url 'login' %}">Log In</a></li>
-          {% endif %}
-          <li>
-            <a href="{% url 'view_cart' %}">
-              <i class="fa fa-shipping-cart"></i>Cart
-              {% if product_count > 0 %}
-              <label class="badge badge-warning">{{ product_count }}</label>
-              {% endif %}
+        <div class="navbar-collapse collapse" id="navbar10">
+          <ul class="navbar-nav nav-fill w-100">
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'index' %}">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'index' %}">Wines</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'index' %}">About</a>
+            </li>
+            {% if user.is_authenticated %}
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'profile' %}">PROFILE</a>
+            </li>
+            {% else %}
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'login' %}">Login</a>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'register' %}">Register</a>
+            </li>
+            {% endif %}
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'view_cart' %}">
+                <i class=""></i> Cart
+                {% if product_count > 0 %}
+                <label class="badge badge-dark">{{ product_count }}</label>
+            </li>
+            {% endif %}
             </a>
-          </li>
-        </ul>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+
+
+    {% if messages %}
+    <div class="alert alert-success">
+      <div class="messages">
+        {% for message in messages %}
+        {{ message }}
+        {% endfor %}
       </div>
     </div>
-  </nav>
-  {% if messages %}
-  <div class="alert alert-success">
-    <div class="messages">
-      {% for message in messages %}
-      {{ message }}
-      {% endfor %}
+    {% endif %}
+
+    <!---Image Slider-->
+
+    <div id="carouselIndicators" class="carousel slide" data-ride="carousel" data-interval="7000">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselIndicators" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner" role="listbox">
+        <!---Slide 0-->
+        <div class="carousel-item active" style="background-image: url(static/img/wine.jpg);"></div>
+        <div class="carousel-caption text-center">
+          <h1>Welcome!</h1>
+          <a class="btn btn-outline-light btn-lg" href="{% url 'products' %}">Explore!</a>
+        </div>
+
+        <!---Slide 1-->
+        <div class="carousel-item" style="background-image: url(static/img/wine2.jpg);"></div>
+        <!---Slide 2-->
+        <div class="carousel-item" style="background-image: url(static/img/wine3.jpg);"></div>
+      </div>
     </div>
-  </div>
-  {% endif %}
-  <div class="container">
-    <div class="display">
-      <form action="{% url 'search' %}" method="get">
-        <input type="text" name="q">
-        <button type="search">Search</button>
-      </form>
-    </div>
-    {% block content %} {% endblock %}
-  </div>
-  <footer>
+
+
+
     <div class="container">
+      {% block content %}
+
+      {% endblock %}
     </div>
-  </footer>
+
+  </div>
+
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
+
 </body>
 
 </html>
