--- a/accounts/templates/index.html
+++ b/accounts/templates/index.html
@@ -1,3 +1,5 @@
-{% extends 'base.html' %}
-{% block content %}
-{% endblock %}
+{% extends 'base.html' %} 
+
+{% block page_title %}Home Page{% endblock %} 
+
+{% block page_heading %}Home{% endblock %}
