--- a/accounts/templates/profile.html
+++ b/accounts/templates/profile.html
@@ -1,7 +1,26 @@
-{% extends "base.html" %}
+{% extends 'base.html' %} 
+
+{% block page_title %} {{ user }}'s Profile{% endblock %} 
+
+{% block page_heading %}{% endblock %} 
+
 {% block content %}
-    <h2>Success!</h2>
-    <p>You are logged in as {{ user.email }} </p>
-    <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+
+<div class="container-fluid parallax"></div>
+  
+<div class="container">
+    <div class="row">
+        <div class="col-xs-12 col-md-6 col-lg-4 col-centered mb-5 mt-5">
+            <div class="card" style="width: 18rem;">
+                <img class="card-img-top" src="/media/{{ 'images/profile-img.png' }}" alt="Card image cap">
+                <div class="card-body">
+                    <h2> {{ user }}'s Profile </h2>
+                    <p> {{ profile.email }} </p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 
 {% endblock %}
