--- a/cart/templates/cart.html
+++ b/cart/templates/cart.html
@@ -3,40 +3,53 @@
 {% load bootstrap_tags %}
 
 {% block content %}
-<div class="row row-flex">
-    {% for item in cart_items %}
+
+<div class="container mb-5">
+      <div class="py-5 text-center">
+        <h2>Your Cart</h2>
+      </div>
+
+
+    <table class="table">
+      <thead class="thead-dark">
+        <tr>
+        
+          <th scope="col">Product</th>
+          <th scope="col"></th>
+          <th scope="col">Price</th>
+          <th scope="col">Items Added</th>
+          <th scope="col">Change Quantity</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for item in cart_items %}  
+            <tr>
+                  <td><img src="{{MEDIA_URL}}{{item.product.image}}" class="card-img-top product-image" alt="{{product.name}}" style="width: 3em;" /></td>
+                  <td>{{ item.product.name }}</td>
+                  <td>€ {{ item.product.price }}</td>
+                  <td> {{ item.quantity }} </td>
+                  <td><form class="form-inline" method="post" action="{% url 'adjust_cart' item.id %}">
+                            {% csrf_token %}
+                            <div class="form-group">
+                                <div class="input-group">
+                                    <input class="input-cart" name="quantity" type="number" min="0" max="999" class="form-control" value="{{item.quantity}}" >
+                                    <button type="submit" class="btn btn-dark btn-sm"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span>Change Quantity</button>
+                                </div>
+                            </div>
+                    </form></td>
+            </tr>
+        {% endfor %}
+      </tbody>
+    </table>
     
-    <div class="col-xs-10 col-xs-offset-1 col-sm-offset-0 col-sm-6 col-md-4 display panel panel-display">
-        
-        <div class="product" style="background-image: url('{{ MEDIA_URL }}{{ item.product.image }}')"></div>
-        
-        <div class="caption">
-            <h3>{{ item.product.name }}</h3>
-            <p class="product-description">{{ item.product.description }}</p>
-            <p>{{ item.product.price }}</p>
-            <p>
-                
-                <form class="form-inline" method="post" action="{% url 'adjust_cart' item.id %}">
-                    {% csrf_token %}
-                    <div class="form-group">
-                        <label for="exampleInputAmount" class="sr-only">New Qty</label>
-                        <div class="input-group">
-                            <div class="input-group-addon">Qty</div>
-                            <input name="quantity" type="number" min="0" max="999" class="form-control">
-                            <div class="input-group-addon">{{item.quantity}}</div>
-                        </div>
-                    </div>
-                    <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span>Amend</button>
-                </form>
-            </p>
-        </div>
+    <div class="p-3 mb-2 bg-light text-dark justify-content-end div-checkout-pay">
+        <p class="ml-auto">Total: <strong>€  {{ total }} </strong></p>
+        <a href="{% url 'checkout' %}" class="btn btn-dark" role="button"><span class="glyphicon glyphicon-ok-sign" aria-hidden="true"></span>Checkout</a>
     </div>
-    {% endfor %}
-</div>
-<div class="row">
-    <p>Total</p>
-    <p><span class="glyphicon glyphicon-euro" aria-hidden="true"></span>{{ total }}</p>
-    <a href="{% url 'checkout' %}" class="btn btn-success" role="button"><span class="glyphicon glyphicon-ok-sign" aria-hidden="true"></span>Checkout</a>
 </div>
 
 {% endblock %}
+
+
+
+                
