--- a/checkout/templates/checkout.html
+++ b/checkout/templates/checkout.html
@@ -4,7 +4,8 @@
 
 {% block head_js %}
 <script type="text/javascript" src="https://js.stripe.com/v2/"></script>
-<script type="text/javascript">
+<script type="text/javascript" src="">
+
     //<![CDATA[
         Stripe.publishableKey = '{{ publishable }}';
     //]]>
@@ -13,45 +14,69 @@
 {% endblock %}
 
 {% block content %}
-<div class="row row-flex">
-    {% for item in cart_items %}
-        <div class="col-xs-10 col-xs-offset-1 col-sm-offset-0 col-sm-6 col-md-4 display panel panel-default">
-            <div class="panel-body">
-                <div class="product" style="background-image: url('{{ MEDIA_URL }}{{ item.product.image }}')"></div>
 
-                <div class="caption">
-                    <h3>{{ item.product.name }}</h3>
-                    <p class="product-description">{{ item.product.description }}</p>
-                    <p>{{ item.quantity }}</p>
-                    <p>{{ item.product.price }}</p>
+
+<!-- Payment Form section -->
+
+<div class="">
+    <div class="container">
+      <div class="py-5 text-center">
+        <h2>Checkout form</h2>
+        <p class="lead">Please fill up the details below to finilise your order.</p>
+      </div>
+
+      <div class="row">
+        <div class="col-md-4 order-md-2 mb-4">
+          <h4 class="d-flex justify-content-between align-items-center mb-3">
+            <span class="text-muted">Your cart</span>
+            <span class="badge badge-secondary badge-pill">3</span>
+          </h4>
+          
+          <ul class="list-group mb-3">
+        {% for item in cart_items %}
+              <li class="list-group-item d-flex justify-content-between lh-condensed">
+                <div>
+                  <h6 class="my-0">{{ item.product.name }} ({{ item.quantity }})</h6>
+                  <small class="text-muted">{{ item.product.description|truncatewords:10 }}</small>
                 </div>
-            </div>
+                <span class="text-muted">{{ item.product.price }}</span>
+              </li>
+           {% endfor %}
+            <li class="list-group-item d-flex justify-content-between">
+              <span>Total (EUR)</span>
+              <strong>€{{ total }}</strong>
+            </li>
+          </ul>
         </div>
-    {% endfor %}
+        
+        
+        <div class="col-md-8 order-md-1 pb-2">
+        <form role="formc checkout-form mb-2" method="post" id="payment-form" action="{% url 'checkout' %}">
+            <legend>Payment Details</legend>
+            <hr class="mb-4">
+        
+            <div id="credit-card-errors" style="display: none;">
+                <div id="alert-message block-message error" id="stripe-error-message"></div>
+            </div>
+        
+            <div class="form-group">
+                {{ order_form | as_bootstrap }}
+            </div>
+            
+            <h4 class="mb-3">Card Details</h4>
+            <hr class="mb-4">
+            
+            <div class="form-group">
+                {{ payment_form | as_bootstrap }}
+            </div>
+        
+            {% csrf_token %}
+            <div class="form-group ">
+                <input class=" btn btn-primary" id="submit_payment_btn" name="commit" type="submit" value="Submit Payment">
+            </div>
+    </form>
+        </div>
 </div>
-<div class="row">
-    <p>Total</p>
-    <p><span class="glyphicon glyphicon-euro" aria-hidden="true"></span>{{ total }}</p>
 </div>
 
-<form role="form" method="post" id="payment-form" action="{% url 'checkout' %}">
-    <legend>Payment Details</legend>
-
-    <div id="credit-card-errors" style="display: none;">
-        <div id="alert-message block-message error" id="stripe-error-message"></div>
-    </div>
-
-    <div class="form-group col-md-6">
-        {{ order_form | as_bootstrap }}
-    </div>
-
-    <div class="form-group col-md-6">
-        {{ payment_form | as_bootstrap }}
-    </div>
-
-    {% csrf_token %}
-    <div class="form-group col-md-12">
-        <input class=" btn btn-primary" id="submit_payment_btn" name="commit" type="submit" value="Submit Payment">
-    </div>
-</form>
 {% endblock %}
