--- a/accounts/templates/registration.html
+++ b/accounts/templates/registration.html
@@ -1,8 +1,8 @@
-{% extends 'base.html' %} 
+{% extends 'base.html' %}
 
-{% load bootstrap_tags %} 
+{% load bootstrap_tags %}
 
-{% block page_title %}Registration Page{% endblock %} 
+{% block page_title %}Registration Page{% endblock %}
 
 
 {% block content %}
@@ -12,7 +12,7 @@
    <div class="container mb-5">
       <div class="py-5 text-center">
         <h2>Registration form</h2>
-        <p class="lead">Please fill up the details below to register to B&O shop.</p>
+        <p class="lead">Please fill up the details below to register to Bordeaux.</p>
         <p>If you already have an account, you can <a href="{% url 'login' %}">Login in here</a></p>
       </div>
 
