--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -3,6 +3,8 @@
 
 {% block content %}
     {% if validlink %}
+    <div class="wrapper">
+
         <p>Please enter your new password twice.<br />
            So we can verify you typed it in correctly.</p>
         <form action="" method="post" class="accountform">
@@ -32,4 +34,5 @@
         possibly because it has already been used. <br />
         Please request a new password reset.</p>
     {% endif %}
+    </div>
 {% endblock %}
