--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -2,6 +2,7 @@
 {% block title %}Reset Password{% endblock %}
 
 {% block content %}
+<div class="wrapper">
 
 <form method="post" class="accountform">
     <p>Please specify your email address to receive instructions for resetting it.</p>
@@ -12,4 +13,5 @@
      {{ form.email.errors }}
     <p><label for="id_email" class="control-label required-field">E-mail address:</label> {{ form.email }} <input type="submit" value="Reset password" /></p>
 </form>
+</div>
 {% endblock %}
