--- a/products/templates/products.html
+++ b/products/templates/products.html
@@ -1,31 +1,120 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<form action="{% url 'search' %}" method="get" class="form-inline my-2 my-lg-0">
-    <input class="form-control rounded-0 mr-0" name="q" type="search" placeholder="Product Search" aria-label="Search">
-    <button type="search" class="btn btn-dark btn-sm rounded-0">Search</button>
-</form>
-<div class="row row-flex">
-    {% for product in products %}
-    <div class="col-xs-10 col-xs-offset-1 col-sm-offset-0 col-sm-6 col-md-4 display panel panel-default">
-        <div class="panel-body">
-            <div class="product" style="background-image: url('{{ MEDIA_URL }}{{ product.image }}')"></div>
-            <h3>{{ product.name }}</h3>
-            <p class="product-description">{{ product.description }}</p>
-            <p>{{ product.price }}</p>
 
-            <form method="post" action="{% url 'add_to_cart' product.id %}">
-                {% csrf_token %}
-                <div class="input-group">
-                    <input name="quantity" type="number" min="1" max="999" class="form-control" placeholder="Quantity">
-                    <span class="input-group-btn">
-                        <button class="btn btn-success" type="submit">Add</button>
-                    </span>
+<!-- Main Slide -->
+<div id="carouselIndicators" class="carousel slide" data-ride="carousel" data-interval="7000">
+    <ol class="carousel-indicators">
+        <li data-target="#carouselIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselIndicators" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner" role="listbox">
+        <!---Slide 0-->
+        <div class="carousel-item active" style="background-image: url(static/img/slide.jpg);"></div>
+        <div class="container-fluid">
+            <div class="carousel-caption text-center">
+                <h1>Welcome!</h1>
+                <a class="btn btn-outline-light btn-lg" href="{% url 'all_products2' %}">Explore!</a>
+            </div>
+        </div>
+        <!---Slide 1-->
+        <div class="carousel-item" style="background-image: url(static/img/slide1.jpg);"></div>
+        <!---Slide 2-->
+        <div class="carousel-item" style="background-image: url(static/img/slide2.jpg);"></div>
+    </div>
+</div>
+
+<!-- Products showcase -->
+
+<section class="products-showcase">
+    <div class="text-center pt-5">
+        <h1 style="color:#D5BF8E"> An Authentic French Wine Experience </h1>
+    </div>
+
+    <br>
+    <br>
+    <hr>
+    <br>
+
+    <div class="container-fluid">
+        <div class="row align-items-center row-header card-columns text-center justify-content-center">
+            <div class="card-deck ">
+                {% for product in products|slice:":3" %}
+
+
+
+
+
+                <div class="col-lg-4 col-md-6 col-xs-14 header-first text-center mx-auto">
+                    <div class="card border-0 text-center" style="width: 21rem;">
+
+                        <a href="{% url 'product_detail' product.id %}" class="image-product-link">
+
+                            <img src="{{MEDIA_URL}}{{product.image}}" class="card-img-top product-image"
+                                alt="{{product.name}}" /></a>
+                        <div class="card-body">
+                            <h5 class="card-title product-name"><a href="{% url 'product_detail' product.id %}"
+                                    class="title-product-link">{{ product.name }}</a></h5>
+                        </div>
+                    </div>
                 </div>
-            </form>
+
+
+
+
+                {% endfor %}
+            </div>
         </div>
     </div>
-    {% endfor %}
+    <div class="text-center pt-5">
+        <a href="{% url 'all_products2' %}" class="btn btn-dark border-0 rounded-0 btn-sm btn-home-products ">
+            <h1> Our wines </h1>
+        </a>
+    </div>
+</section>
+
+<!-- Parallax Banner -->
+
+<div class="container-fluid parallax">
+    <div class="parallax-text">
+        <h1>Where there is no wine there is no love.</h1>
+    </div>
 </div>
+
+
+<!-- Blog Entries -->
+
+<section class="blog-entries mb-5 pb-4">
+    <div class="container">
+        <div class="sec-title mt-5 pt-5 pb-4">
+            <h3 class="m-text5 t-center">
+                Our Grapes
+            </h3>
+        </div>
+        <div class="card-deck ">
+            {% for post in posts|slice:":3" %}
+            <div class="col-lg-4 col-md-6 col-xs-14 header-first text-center mx-auto">
+                <div class="card border-0 text-center" style="width: 18rem;">
+
+                    <a href="{% url 'post_detail' post.id %}" class="image-blogpost-link">
+
+                        <img src="{{MEDIA_URL}}{{post.image}}" class="img-fluid pb-4"></a>
+                    <div class="block3-txt">
+                        <h5 class="">
+                            <a href="{% url 'post_detail' post.id %}" class="title-product-link">{{ post.title }}</a>
+                        </h5>
+                        <p class="s-text8">
+                            {{ post.content|truncatewords:10 }}
+                        </p>
+                    </div>
+                </div>
+            </div>
+            {% endfor %}
+        </div>
+    </div>
+</section>
+
+<!-- Blog Posts end-->
 
 {% endblock %}
