--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -3,7 +3,7 @@
 
 body, html {
     font-family: 'Simonetta', sans-serif;
-    background-color:fff; 
+    background-color:fff;
     scroll-behavior: smooth;
 }
 
@@ -55,7 +55,7 @@ body, html {
 
   }
 
-  
+
 .box{
     background: #fff;
     position: absolute;
@@ -85,7 +85,7 @@ body, html {
         display: table-cell;
         vertical-align: middle;
         width: 50%;
-    } 
+    }
     }
 
 .box .img {
@@ -114,7 +114,7 @@ body, html {
 .box .box-right .btn-beta{
     text-align: center;
     background-color: #e36e3a;
-    
+
 }
 
 .box .box-right h3 {
@@ -210,7 +210,7 @@ body, html {
     font-family: 'Simonetta', sans-serif;
 
 }
-    
+
 
 
 /*   About Page ----------------------------------- */
@@ -259,7 +259,7 @@ body, html {
     font-family: 'Simonetta', sans-serif;
 
 }
- 
+
 .col-centered {
     float: none;
     margin: 0 auto;
@@ -272,7 +272,7 @@ body, html {
 
 .img-mini-banner {
    width:100%;
-   
+
 }
 
 
@@ -299,6 +299,58 @@ body, html {
     justify-content: space-between;
     /* align-items: flex-end; */
 }
+
+/*   Products Search----------------------------------- */
+
+*{
+  margin: 0;
+  padding: 0;
+}
+
+.wrapper{
+  width: 100%;
+  height: 20vh;
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+@media screen and (max-width: 425px){
+  .search_box{
+    width: 95%;
+  }
+}
+
+.main{
+		margin: auto;
+		width: 100%;
+	}
+	.main input,button{
+		width:75%;
+		border:2px solid white;
+		border-right:0px;
+		font-size: 18px;
+		padding:12px;
+		background-color: #273940;
+		color:white;
+	}
+	.main input:hover{
+		opacity: .8;
+	}
+	.main button{
+		width:25%;
+		background-color: #eee;
+		color:black;
+		transition: all 0.3s;
+		float: right;
+		border-left:0px;
+	}
+	.main button:hover{
+		opacity: .8;
+	}
+
 
 
 /*   Parallax ----------------------------------- */
@@ -362,7 +414,7 @@ color:#D5BF8E !important;
 
 
 /* Product detail Page CSS ----------------------------------- */
- 
+
 .add-checkout-div-product {
     padding-top: 2em;
 }
@@ -370,7 +422,7 @@ color:#D5BF8E !important;
 
 /*  Cart Page ----------------------------------- */
 
- 
+
 .input-cart {
     width: 20%;
 }
@@ -400,11 +452,13 @@ color:#D5BF8E !important;
 .mini-banner-section {
     padding: 2em;
 }
- 
+.push {
+  height: 50px;
+}
 
  #myFooter {
     background-color: #273940;
-    color: white;
+    color: #D5BF8E;
     padding-top: 30px;
 }
 
@@ -422,7 +476,7 @@ color:#D5BF8E !important;
 
 .footer-copyright p {
     margin: 10px;
-    color: #ccc;
+    color: #D5BF8E;
     text-transform: uppercase;
     font-size: smaller;
     font-family: 'Simonetta', sans-serif;
@@ -438,7 +492,7 @@ color:#D5BF8E !important;
 #myFooter h5 {
     font-family: 'Simonetta', sans-serif;
     font-size: 18px;
-    color: white;
+    color: #D5BF8E;
     font-weight: bold;
     margin-top: 30px;
 }
@@ -448,18 +502,18 @@ color:#D5BF8E !important;
 
     font-size: 50px;
     text-align: center;
-    color: #fff;
+    color: #D5BF8E;
 }
 
 #myFooter a {
-    color: #d2d1d1;
+    color: #D5BF8E;
     text-decoration: none;
 }
 
 #myFooter a:hover,
 #myFooter a:focus {
     text-decoration: none;
-    color: white;
+    color: #D5BF8E;
 }
 
 #myFooter .social-networks {
@@ -493,17 +547,16 @@ color:#D5BF8E !important;
 }
 
 /*   Media Queries ----------------------------------- */
- 
+
 
 @media screen and (max-width: 767px) {
     #myFooter {
         text-align: center;
     }
-    
+
     .card {
         width: 100%;
     }
-    
-    
-}
 
+
+}
