added AOS styling to every page

--- a/home/templates/about.html
+++ b/home/templates/about.html
@@ -4,11 +4,11 @@
 
 <div class="container-fluid about-parallax"></div>
 
-<section class="mt-5 mb-5 pt-5 pb-5 text-center">
+<section data-aos="fade-up" class="mt-5 mb-5 pt-5 pb-5 text-center">
         <div class="container about-page">
           <h1 class="jumbotron-heading" >About Bordeaux</h1>
           <p class="lead text-muted">Clink Different</p>
-          <p class="pb-5"><h2 style="color:#D5BF8E">The world-famous wines of Bordeaux come from a winemaking tradition stretching back over 20 centuries. The famous wines, 
+          <p class="pb-5"><h2 style="color:#D5BF8E">The world-famous wines of Bordeaux come from a winemaking tradition stretching back over 20 centuries. The famous wines,
             prestigious chateaux and historic sites along the Bordeaux Wine Route reveal the rich heritage of the Bordeaux vineyards.</h2></p>
           <p>
             <hr>
