--- a/products/templates/allproducts.html
+++ b/products/templates/allproducts.html
@@ -20,7 +20,7 @@
         </div>
         {% else %}
         {% for product in products %}
-        <div class="col-xs-12 col-md-6 col-lg-3 header-first">
+        <div data-aos="fade-up" class="col-xs-12 col-md-6 col-lg-3 header-first">
           <div class="card border-0 text-center" style="width: 21rem;">
             <a href="{% url 'product_detail' product.id %}" class="image-product-link"><img src="{{MEDIA_URL}}{{product.image}}" class="card-img-top product-image" alt="{{product.name}}" /></a>
             <div class="card-body">
@@ -61,7 +61,9 @@
                 </span>
               </div>
             </form>
+            <br>
           </div>
+          <br>
         </div>
         {% endfor %}
         {% endif %}
