--- a/products/templates/productdetail.html
+++ b/products/templates/productdetail.html
@@ -7,7 +7,7 @@
 
 <section class="mt-5 mb-5 container">
   <hr>
-  <div class="container dark-grey-text mt-5">
+  <div data-aos="fade-up" class="container dark-grey-text mt-5">
     <div class="row wow fadeIn">
       <div class="col-md-4 mb-4">
         {% if product.image %}
