--- a/products/templates/products.html
+++ b/products/templates/products.html
@@ -27,25 +27,18 @@
 
 <!-- Products showcase -->
 
-<section class="products-showcase">
+<section data-aos="fade-right" class="products-showcase">
     <div class="text-center pt-5">
         <h1 style="color:#D5BF8E"> An Authentic French Wine Experience </h1>
     </div>
-
     <br>
     <br>
     <hr>
     <br>
-
     <div class="container-fluid">
         <div class="row align-items-center row-header card-columns text-center justify-content-center">
             <div class="card-deck ">
                 {% for product in products|slice:":3" %}
-
-
-
-
-
                 <div class="col-lg-4 col-md-6 col-xs-14 header-first text-center mx-auto">
                     <div class="card border-0 text-center" style="width: 21rem;">
 
@@ -59,10 +52,6 @@
                         </div>
                     </div>
                 </div>
-
-
-
-
                 {% endfor %}
             </div>
         </div>
@@ -85,7 +74,7 @@
 
 <!-- Blog Entries -->
 
-<section class="blog-entries mb-5 pb-4">
+<section data-aos="fade-up" class="blog-entries mb-5 pb-4">
     <div class="container">
         <div class="sec-title mt-5 pt-5 pb-4">
             <h3 class="m-text5 t-center">
