--- a/posts/templates/blogposts.html
+++ b/posts/templates/blogposts.html
@@ -2,80 +2,49 @@
 {% block content %}
 
 <div class="container">
-<!-- Sidebar Widgets Column -->
-<nav class="nav">
-    <li class="nav-item ">
-        <a href="{% url 'all_products2' %}"> Wines </a>
-      </li>
-      
-      <li class="nav-item ">
-          <a href="{% url 'get_suggestions' %}">Suggestions</a>
+  <hr>
+  <!-- Sidebar Widgets Column -->
+  <nav class="navbar navbar-expand-lg navbar-dark primary-color">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav nav-fill w-100">
+        <li class="nav-item">
+          <a href="{% url 'all_products2' %}"> Wines </a>
         </li>
-        
-        <li class="nav-item ">
-            <a href="{% url 'about' %}"> About Bordeaux </a>
-          </li>
-          
-          <li class="nav-item ">
-              <a href="{% url 'get_posts' %}"> Our Grapes</a>
-            </li>
-          
-</nav>
+        <li class="nav-item">
+          <a href="{% url 'get_suggestions' %}"> Suggestions</a>
+        </li>
+        <li class="nav-item">
+          <a href="{% url 'about' %}"> About Bordeaux </a>
+        </li>
+        <li class="nav-item">
+          <a href="{% url 'get_posts' %}"> Our Grapes</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+  <br>
+  <div class="card-deck ">
+    {% for post in posts|slice:":4" %}
+    <div class="col-lg-3 col-md-6 col-xs-12 header-first text-center mx-auto">
+      <div class="card border-0 text-center">
 
+        <a href="{% url 'post_detail' post.id %}" class="image-blogpost-link">
 
-
-<div class="col-md-4">
-    <div class="card my-4 rounded-0">
-      <h5 class="card-header">Bordeaux Vineyard</h5>
-      <div class="card-body sidebar">
-        <div class="row">
-          <div class="col-lg-6">
-            <ul class="list-unstyled mb-0">
-              <li>
-                <a href="{% url 'all_products2' %}"> Wines </a>
-              </li>
-              <li>
-                <a href="{% url 'get_suggestions' %}">Suggestions</a>
-              </li>
-            </ul>
-          </div>
-          <div class="col-lg-6">
-            <ul class="list-unstyled mb-0">
-              <li>
-                <a href="{% url 'about' %}"> About Bordeaux </a>
-              </li>
-              <li>
-                <a href="{% url 'get_posts' %}"> Our Grapes</a>
-              </li>
-            </ul>
-          </div>
+          <img src="{{MEDIA_URL}}{{post.image}}" class="img-fluid pb-4"></a>
+        <div class="block3-txt">
+          <h5 class="">
+            <a href="{% url 'post_detail' post.id %}" class="title-product-link">{{ post.title }}</a>
+          </h5>
+          <p class="s-text8">
+            {{ post.content|truncatewords:10 }}
+          </p>
         </div>
       </div>
     </div>
+    {% endfor %}
+  </div>
 </div>
-
-
-
-        <div class="row">
-        <!-- Blog Posts Column -->
-              <div class="col-lg-8 mb-5">
-                  {% for post in posts %}
-                    <h1 class="mt-4">{{ post.title }}</h1>
-                    <hr>
-                    
-                    <p> {{ post.published_date }} </p>
-                    <img class="img-fluid" src="/media/{{ post.image }}">
-                    <hr>
-            
-                    <p class="lead">{{ post.content|truncatewords:30 }}</p>
-                    <p><a href="{% url 'post_detail' post.id %}"  class="btn btn-dark rounded-0">Read more</a></p>
-                    <div class="mb-5"></div>
-                 {% endfor %}
-              </div>
-
-        </div>
-    </div>
-    
-
-    
 {% endblock %}
