--- a/posts/templates/postdetail.html
+++ b/posts/templates/postdetail.html
@@ -1,22 +1,36 @@
 {% extends "base.html" %}
 {% block content %}
-
 <div class="container">
   <div class="row">
     <!-- Post Content Column -->
     <div class="col-lg-8 mb-5">
       <h1 class="mt-4"> {{ post.title }} </h1>
+      <nav class="navbar navbar-expand-lg navbar-dark primary-color">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav nav-fill w-100">
+            <li class="nav-item">
+              <a href="{% url 'all_products2' %}"> Wines </a>
+            </li>
+            <li class="nav-item">
+              <a href="{% url 'get_suggestions' %}"> Suggestions</a>
+            </li>
+            <li class="nav-item">
+              <a href="{% url 'about' %}"> About Bordeaux </a>
+            </li>
+            <li class="nav-item">
+              <a href="{% url 'get_posts' %}"> Our Grapes</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
       <hr>
-      <p>Posted: {{ post.published_date }}</p>
-      <hr>
-
       {% if post.image %}
       <img class="img-fluid img-blogpost" src="/media/{{ post.image }}">
       {% endif %}
-      <hr>
-
       <p class=""> {{ post.content }} </p>
-
       <blockquote class="blockquote">
         <p class="mb-0">Great wine requires a madman to grow the vine, a wise man to watch over it, a lucid poet to make
           it, and a lover to drink it.</p>
@@ -24,44 +38,8 @@
           <cite title="Source Title">Salvador Dali </cite>
         </footer>
       </blockquote>
-
-      <a href="{% url 'get_posts' %}" class="btn btn-dark rounded-0">Back to Blog →</a>
-
-    </div>
-
-    <!-- Sidebar Widgets Column -->
-    <div class="col-md-4">
-      <div class="card my-4 rounded-0">
-        <h5 class="card-header">Bordeaux Vineyard</h5>
-        <div class="card-body sidebar">
-          <div class="row">
-            <div class="col-lg-6">
-              <ul class="list-unstyled mb-0">
-                <li>
-                  <a href="{% url 'all_products2' %}"> Wines </a>
-                </li>
-                <li>
-                  <a href="{% url 'get_suggestions' %}"> Suggestions</a>
-                </li>
-              </ul>
-            </div>
-            <div class="col-lg-6">
-              <ul class="list-unstyled mb-0">
-                <li>
-                  <a href="{% url 'about' %}"> About Bordeaux </a>
-                </li>
-                <li>
-                  <a href="{% url 'get_posts' %}"> Our Grapes</a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
+      <a href="{% url 'get_posts' %}" class="btn btn-dark rounded-0">Back to Grapes →</a>
     </div>
   </div>
 </div>
-
-
-
 {% endblock %}
