--- a/products/templates/productdetail.html
+++ b/products/templates/productdetail.html
@@ -15,6 +15,8 @@
         {% endif %}
       </div>
       <div class="col-md-8 mb-4">
+
+
         <div class="p-4">
           <p class="lead font-weight-bold">{{ product.name }}</p>
           <p class="lead">
@@ -52,8 +54,22 @@
               <span class="input-group-btn">
                 <button class="btn btn-dark rounded-0 btn-sm" type="submit">Add to Cart</button></span>
             </div>
+            <a href="{% url 'add_review' product.id %}" class="btn btn-success review-btn"> Leave a review </a>
           </form>
 
+          <div class="col-xs-12 col-sm-6 col-md-6">
+              <span class="sort-inline review-inner-header">Reviews (Most recent 10)</span>
+              <hr class="hr-dark-grey" />
+
+              {% for review in products %}
+              
+              <div>
+                  <p>{{ review.rating }} <i class="fa fa-star star-color" aria-hidden="true"></i> - {{ review.user_name | upper }}</p>
+                  <p>{{ review.comment }} </p>
+                  <hr/>
+              </div>
+              {% endfor %}
+          </div>
         </div>
       </div>
     </div>
