product review and rating added but not showing.

--- a/products/templates/create_review.html
+++ b/products/templates/create_review.html
@@ -4,7 +4,7 @@
 
   <!-- Header -->
   <div class="row header review-header-sm ">
-      <span>Leaving a review {{ product.name }}</span>
+      <span>Leaving a review on {{ product.name }}</span>
   </div>
 
   <!-- Displays review form -->
