--- a/products/templates/productdetail.html
+++ b/products/templates/productdetail.html
@@ -22,6 +22,7 @@
           <p class="lead">
             <span> {{ product.price }} sek</span>
           </p>
+
           <p>{{ product.description }}</p>
           <form method="post" action="{% url 'add_to_cart' product.id %}">
             {% csrf_token %}
@@ -54,26 +55,29 @@
               <span class="input-group-btn">
                 <button class="btn btn-dark rounded-0 btn-sm" type="submit">Add to Cart</button></span>
             </div>
-            <a href="{% url 'add_review' product.id %}" class="btn btn-success review-btn"> Leave a review </a>
           </form>
-
-          <div class="col-xs-12 col-sm-6 col-md-6">
-              <span class="sort-inline review-inner-header">Reviews (Most recent 10)</span>
-              <hr class="hr-dark-grey" />
-
-              {% for review in products %}
-              
-              <div>
-                  <p>{{ review.rating }} <i class="fa fa-star star-color" aria-hidden="true"></i> - {{ review.user_name | upper }}</p>
-                  <p>{{ review.comment }} </p>
-                  <hr/>
-              </div>
-              {% endfor %}
-          </div>
         </div>
+        <a href="{% url 'add_review' product.id %}" class="btn btn-dark review-btn"> Leave a review </a>
+
       </div>
+
+    </div>
+
+    <div class="col-xs-12 col-sm-6 col-md-6">
+        <span class="sort-inline review-inner-header">Reviews (Most recent 5)</span>
+        <hr class="hr-dark-grey" />
+
+        {% for reviews in Product %}
+
+        <div>
+            <p>{{ review.rating }} <i class="fa fa-star star-color" aria-hidden="true"></i> - {{ review.user_name | upper }}</p>
+            <p>{{ review.comment }} </p>
+            <hr/>
+        </div>
+
+        {% endfor %}
+
     </div>
     <hr>
 </section>
-
 {% endblock %}
