--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -20,133 +20,46 @@ body, html {
     list-style-type: none;
 }
 
-/*   Age PopUp ----------------------------------- */
+/*   reviews  ----------------------------------- */
 
-
-.decor-line {
-    position:	relative;
-    top:	0.7em;
-  border-top: 1px solid #ccc;
-  text-align:center;
-  max-width: 30%;
-  margin: 0.5em auto;
-  display: block;
-  padding: 0.1em 1em;
-  color: #ccc;
+.review-header {
+    font-size: 100px !important;
+    height: 36vh;
+    margin-left: 10px;
+    margin-right: 10px;
 }
-.decor-line .span {
-    background: #fff;
-    color: #ccc;
+
+.review-name {
     position: relative;
-    top: -.7em;
-    padding: 0.5em;
-    text-transform: uppercase;
-    letter-spacing: 0.1em;
-    font-weight:	900;
+    text-shadow: 0 0 14px black;
 }
 
-.overlay-verify{
-    position:fixed;
-    height: 100%;
-    width: 100%;
-    top: 0;
-    left: 0;
-;
-
-  }
-
-
-.box{
-    background: #fff;
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 20%;
-    bottom: 0;
-    margin: 0 auto;
-    z-index: 9;
-    width: 50%;
-    height: 40%;
-    display:table;
-    z-index: 1;
-    background-color: rgba(0,0,0,.8);
- }
-
-.box .box-left {
-    background:url("/static/img/box.jpg") 50% 50%;
-    width: 100%;
-    position: relative;
-    text-align: center;
-    padding: 5%;
+.review-header-sm {
+    margin-left: 10px;
+    margin-right: 10px;
+    text-shadow: 0 0 14px black;
 }
 
-@media (min-width: 54em) {
-    .box .box-left, .box .box-right {
-        display: table-cell;
-        vertical-align: middle;
-        width: 50%;
-    }
-    }
-
-.box .img {
-    position: relative;
-    z-index: 4;
-    width: 9em;
+.review-info-area {
+    margin: 20px 10px 20px 10px;
+    padding: 10px;
+    background-color: #0E53A7;
+    border-radius: 4px;
 }
 
-.box .box-right {
-    text-align: center;
-    width: 100%;
-    position: relative;
-    text-align: center;
-    padding: 5%;
+.review-form {
+    margin-top: 30px;
 }
 
-.box .box-right .btn {
-    background-color: #54A984;
-
-    font-weight: 600;
-    letter-spacing: 0.2em;
-    padding: 0.9em 1em 0.7em;
-    margin: 1em auto;
-    display: block;
-}
-.box .box-right .btn-beta{
-    text-align: center;
-    background-color: #e36e3a;
-
+.review-inner-header {
+    margin-top: 20px;
+    min-height: 30px;
+    font-size: 20px;
 }
 
-.box .box-right h3 {
-    color: #555;
-		  text-transform: uppercase;
-		  letter-spacing: 0.07em;
-		  border-bottom: 1px solid #eee;
-		  padding-bottom: 1em;
-		  margin: 0 auto;
+.review-sm-img {
+    height: 190px;
 }
-
-.box-right .btn {
-    font-weight: 600;
-    letter-spacing: 0.2em;
-    padding: 0.9em 1em 0.7em;
-    margin: 1em auto;
-    display: block;
-}
-
-.box-right small {
-    color: #ccc;
-    font-weight: 600;
-    letter-spacing: 0.2em;
-    padding: 0.9em 1em 0.7em;
-    margin: 1em auto;
-    display: block;
-}
-
-
-
-
-
 
 
 /*   Navbar ----------------------------------- */
