small styling and adding buttons to the Post/Grapes pages

--- a/posts/templates/postdetail.html
+++ b/posts/templates/postdetail.html
@@ -38,7 +38,9 @@
           <cite title="Source Title">Salvador Dali </cite>
         </footer>
       </blockquote>
-      <a href="{% url 'get_posts' %}" class="btn btn-dark rounded-0">Back to Grapes →</a>
+      <a href="{% url 'get_posts' %}" class="btn btn-dark rounded-0">More of Our Grapes</a>
+      <a href="{% url 'all_products2' %}" class="btn btn-dark rounded-0">Wines</a>
+      <a href="{% url 'index' %}" class="btn btn-dark rounded-0">Home</a>
     </div>
   </div>
 </div>
