--- a/products/templates/products.html
+++ b/products/templates/products.html
@@ -78,7 +78,11 @@
     <div class="container">
         <div class="sec-title mt-5 pt-5 pb-4">
             <h3 class="m-text5 t-center">
-                Our Grapes
+              <div class="text-center pt-5">
+                  <a href="{% url 'get_posts' %}" class="btn ">
+                      <h1> Our Grapes </h1>
+                  </a>
+              </div>
             </h3>
         </div>
         <div class="card-deck ">
@@ -102,6 +106,7 @@
             {% endfor %}
         </div>
     </div>
+    <hr>
 </section>
 
 <!-- Blog Posts end-->
